traefik/dashboard-hook-ingressroute.yaml
---
# 定义traefik dashboard访问验证
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: loadblance
spec:
  basicAuth:
    secret: authsecret
---
# http重定向https
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: redirect-https
#  namespace: loadblance
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-web-http
  namespace: loadblance
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`traefik.rr.tv`)"
    kind: Rule
    middlewares:
    - name: traefik-dashboard-auth
      namespace: loadblance
    services:
    - name: api@internal
      kind: TraefikService
---
